Mod Structure Update and code refactor (Part 3)
- Replace all Jetbrains annotations with jspecify annotations

- Use models

- Remove unused class

- Move some code logic

- General Code Refactor

part 3